# bdfresize

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  bdfresize.1  bdfresize.c  charresize.c  config.h.in  configure  configure.in  def.h
