dnl Process this file with autoconf to produce a configure script.
AC_INIT(bdfresize.c)
AM_INIT_AUTOMAKE(bdfresize, 1.5)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Sets GCC option.
if test -n "$GCC"; then
    CFLAGS="$CFLAGS -Wall -Wunused -Wuninitialized -Wmissing-prototypes -Wmissing-declarations"
fi

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_REPLACE_FUNCS(memset)

AM_CONFIG_HEADER(config.h)
AC_OUTPUT([Makefile])
